# qa_guru_17_python_git

./: README.md  pyproject.toml
