[tool.poetry]
name = "with_poetry"
version = "0.1.0"
package-mode = false
description = ""
authors = ["semenov <semenov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc9"
pytest = "^9.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"